--- a/index.html
+++ b/index.html
@@ -21,4 +21,17 @@
 
   <figure><h3>This is my job</h3></figure>
 
+  <main>
+
+    <br><br>
+
+  <section id="aboutMe">
+    <h2>About Me</h2>
+    <p>I studied at Technological Institute of Venezuela, and graduated in 2020 with a associed computing.I've been working at Itnoroeste.For 3 years
+      as a software Develop, and after i change of company for Infocent where i worked from 2022 till 2023 as Senior Programmer Analyst.
+    </p>
+  </section>
+
+  </main>
+
 </html>
