--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
   <main>
 
-    <br><br>
+    <aside>
+      <h1>About Me</h1>
+  </aside>
 
-  <section id="aboutMe">
-    <h2>About Me</h2>
+  <section>
     <p>I studied at Technological Institute of Venezuela, and graduated in 2020 with a associed computing.I've been working at Itnoroeste.For 3 years
       as a software Develop, and after i change of company for Infocent where i worked from 2022 till 2023 as Senior Programmer Analyst.
     </p>
