8/14/24 i add the big and small img
i was using class to each img but it's no working fine

--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     </nav>
   </header>
 
-  <figure><h3>This is my job</h3></figure>
+  <figure class="firstImg"><h3>This is my job</h3></figure>
 
   <main>
-
     <aside>
-      <h1>About Me</h1>
+      <h1 id="aboutMe">About Me</h1>
   </aside>
 
   <section>
@@ -34,5 +33,28 @@
   </section>
 
   </main>
+
+  <section class="prueba" id="work">
+
+    <aside>
+      <h1 >Work</h1>
+    </aside>
+  
+    <figure class="secondImg"></figure>
+
+  </section>
+
+  <section>
+
+    <ul class="skills">
+      <li class="thirdImg"></li>
+      <li class="fourImg"></li>
+      <li class="fiveImg"></li>
+      <li class="sixdImg"></li> 
+    </ul>
+
+  </section>
+
+  
 
 </html>
