8/14/2024 i have to take support from video
i had watched the videos because i have problem with the align

--- a/index.html
+++ b/index.html
@@ -23,37 +23,52 @@
 
   <main>
     <aside>
-      <h1 id="aboutMe">About Me</h1>
-  </aside>
-
-  <section>
-    <p>I studied at Technological Institute of Venezuela, and graduated in 2020 with a associed computing.I've been working at Itnoroeste.For 3 years
-      as a software Develop, and after i change of company for Infocent where i worked from 2022 till 2023 as Senior Programmer Analyst.
-    </p>
-  </section>
-
-  </main>
-
-  <section class="prueba" id="work">
+        <h1 id="aboutMe">About Me</h1>
+    </aside>
+    <section>
+      <p>I studied at Technological Institute of Venezuela, and graduated in 2020 with a associed computing.I've been working at Itnoroeste.For 3 years
+        as a software Develop, and after i change of company for Infocent where i worked from 2022 till 2023 as Senior Programmer Analyst.
+      </p>  
+    </section>
 
     <aside>
-      <h1 >Work</h1>
+        <h1 id="work">Work</h1>
     </aside>
-  
-    <figure class="secondImg"></figure>
+    <section>
+        <figure id="firstPicture"><a href="https://placehold.co/900x400"><img src="https://placehold.co/900x400" alt="it's no working right now, so sorry"></a> </figure>
+        <figure class="skills">
+            <section>
+                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+            </section>
 
-  </section>
+            <section>
+                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+            </section>
 
+            <section>
+                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+            </section>
+
+            <section>
+                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+            </section>
+        </figure>
+    </section>
+</main>
+
+<footer>
+  <aside>
+    <h1 id="contactMe">Contact Me</h1>
+  </aside>
   <section>
-
-    <ul class="skills">
-      <li class="thirdImg"></li>
-      <li class="fourImg"></li>
-      <li class="fiveImg"></li>
-      <li class="sixdImg"></li> 
+    <ul>
+        <li> <a href="#">111-111-1111</a></li>
+        <li> <a href="mailto:ploy@yahoo.com">ploy@yahoo.com</a></li>
+        <li> <a href="https://placehold.co/400">Github</a></li>
+        <li> <a href="https://placehold.co/400">LinkedIn</a></li>
     </ul>
-
   </section>
+</footer>
 
   
 
