--- a/index.html
+++ b/index.html
@@ -62,14 +62,11 @@
   </aside>
   <section>
     <ul>
-        <li> <a href="#">111-111-1111</a></li>
-        <li> <a href="mailto:ploy@yahoo.com">ploy@yahoo.com</a></li>
-        <li> <a href="https://placehold.co/400">Github</a></li>
-        <li> <a href="https://placehold.co/400">LinkedIn</a></li>
+        <li><a href="#">111-111-1111</a></li>
+        <li><a href="#">Github</a></li>
+        <li><a href="#">LinkedIn</a></li>
     </ul>
   </section>
 </footer>
-
-  
 
 </html>
