--- a/index.html
+++ b/index.html
@@ -35,22 +35,23 @@
         <h1 id="work">Work</h1>
     </aside>
     <section>
-        <figure id="firstPicture"><a href="https://placehold.co/900x400"><img src="https://placehold.co/900x400" alt="it's no working right now, so sorry"></a> </figure>
+        <figure id="secondImage"> <a href="assets/images/secondImage.jpg"><img src="assets/images/secondImage.jpg" alt="it's no working right now, so sorry"></a> </figure>
         <figure class="skills">
+            
             <section>
-                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+              <a href="assets/images/fiveImage.jpg"><img src="assets/images/fiveImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
-                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+              <a href="assets/images/fordImage.jpg"><img src="assets/images/fordImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
-                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+              <a href="assets/images/thirdImage.jpg"><img src="assets/images/thirdImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
-                <img src="https://placehold.co/350x120" alt="it's no working right now, so sorry">
+              <a href="assets/images/sixImage.avif"><img src="assets/images/sixImage.avif" alt="it's no working right now, so sorry"></a>
             </section>
         </figure>
     </section>
