--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 id="work">Work</h1>
     </aside>
     <section>
-        <figure id="secondImage"> <a href="assets/images/secondImage.jpg"><img src="assets/images/secondImage.jpg" alt="it's no working right now, so sorry"></a> </figure>
+        <figure id="secondImage"> <a href="assets/images/secondImage.jpg"><img src="assets/images/secondImage.jpg" alt="it's no working right now, so sorry"></figure>
         <figure class="skills">
             
             <section>
