--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <header>
-    <h1>Daniel Ramirez</h1>
+    <h1><a href="#">Daniel Ramirez</a></h1>
     <nav>
         <ul>
             <li><a href="#aboutMe">About me</a></li>
@@ -35,23 +35,23 @@
         <h1 id="work">Work</h1>
     </aside>
     <section>
-        <figure id="secondImage"> <a href="assets/images/secondImage.jpg"><img src="assets/images/secondImage.jpg" alt="it's no working right now, so sorry"></figure>
+        <figure id="secondImage"> <a href="assets/images/secondImage.jpg"><img class="imagen" src="assets/images/secondImage.jpg" alt="it's no working right now, so sorry"></figure>
         <figure class="skills">
             
             <section>
-              <a href="assets/images/fiveImage.jpg"><img src="assets/images/fiveImage.jpg" alt="it's no working right now, so sorry"></a>
+              <a href="assets/images/fiveImage.jpg"><img class="imagen" src="assets/images/fiveImage.jpg" alt="it's no working right now, so sorry"><p class="image-text">ddd</p></a>
             </section>
 
             <section>
-              <a href="assets/images/fordImage.jpg"><img src="assets/images/fordImage.jpg" alt="it's no working right now, so sorry"></a>
+              <a href="assets/images/fordImage.jpg"><img class="imagen" src="assets/images/fordImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
-              <a href="assets/images/thirdImage.jpg"><img src="assets/images/thirdImage.jpg" alt="it's no working right now, so sorry"></a>
+              <a href="assets/images/thirdImage.jpg"><img class="imagen" src="assets/images/thirdImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
-              <a href="assets/images/sixImage.avif"><img src="assets/images/sixImage.avif" alt="it's no working right now, so sorry"></a>
+              <a href="assets/images/sixImage.avif"><img class="imagen" src="assets/images/sixImage.avif" alt="it's no working right now, so sorry"></a>
             </section>
         </figure>
     </section>
@@ -63,7 +63,7 @@
   </aside>
   <section>
     <ul>
-        <li><a href="#">111-111-1111</a></li>
+        <li><a href="#">954-605-5243</a></li>
         <li><a href="#">Github</a></li>
         <li><a href="#">LinkedIn</a></li>
     </ul>
