--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <figure class="skills">
             
             <section>
-              <a href="assets/images/fiveImage.jpg"><img class="imagen" src="assets/images/fiveImage.jpg" alt="it's no working right now, so sorry"><p class="image-text">ddd</p></a>
+              <a href="assets/images/fiveImage.jpg"><img class="imagen" src="assets/images/fiveImage.jpg" alt="it's no working right now, so sorry"></a>
             </section>
 
             <section>
