updated styles and flex box; corrected spellings in header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="#aboutMe">About me</a></li>
             <li><a href="#work">Work</a></li>
-            <li><a href="#contactMe">Contac Me</a></li>
+            <li><a href="#contactMe">Contact Me</a></li>
             <li><a href="#resume">Resume</a></li>
         </ul>
     </nav>
